--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -3,6 +3,10 @@ Pos=60,60
 Size=400,400
 
 [Window][Hello, Dear ImGui with SDL2]
-Pos=70,55
+Pos=158,177
 Size=247,48
+
+[Window][My Window]
+Pos=319,68
+Size=548,372
 
