--- a/SuperGameEngine/Engine/Engine.vcxproj
+++ b/SuperGameEngine/Engine/Engine.vcxproj
@@ -240,9 +240,12 @@
     <ClInclude Include="Structural\GameObject\GameObject.h" />
     <ClInclude Include="Structural\GameObject\SuperGameObject.h" />
     <ClInclude Include="Structural\InternalComponents\TestComponent\TestComponent.h" />
+    <ClInclude Include="Structural\Packages\GrandScenePackage.h" />
     <ClInclude Include="Structural\Packages\SceneLoadPackage.h" />
+    <ClInclude Include="Structural\Packages\SuperGrandScenePackage.h" />
     <ClInclude Include="Structural\Packages\SuperSceneLoadPackage.h" />
     <ClInclude Include="Structural\Scene\GrandScene.h" />
+    <ClInclude Include="Structural\Scene\SuperGrandScene.h" />
     <ClInclude Include="Structural\Spatial\Area\Circle.h" />
     <ClInclude Include="Structural\Spatial\Area\Rectangle.h" />
     <ClInclude Include="Structural\Spatial\Area\RectangleInt.h" />
@@ -283,8 +286,10 @@
     <ClCompile Include="Structural\GameObject\ComponentFactory.cpp" />
     <ClCompile Include="Structural\GameObject\SuperGameObject.cpp" />
     <ClCompile Include="Structural\InternalComponents\TestComponent\TestComponent.cpp" />
+    <ClCompile Include="Structural\Packages\SuperGrandScenePackage.cpp" />
     <ClCompile Include="Structural\Packages\SuperSceneLoadPackage.cpp" />
     <ClCompile Include="Structural\Scene\GrandScene.cpp" />
+    <ClCompile Include="Structural\Scene\SuperGrandScene.cpp" />
     <ClCompile Include="Structural\Spatial\Area\Circle.cpp" />
     <ClCompile Include="Structural\Spatial\Area\Rectangle.cpp" />
     <ClCompile Include="Structural\Spatial\Area\RectangleInt.cpp" />
