--- a/SuperGameEngine/Engine/Engine.vcxproj
+++ b/SuperGameEngine/Engine/Engine.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="Structural\GameObject\ComponentFactory.h" />
     <ClInclude Include="Structural\GameObject\GameObject.h" />
     <ClInclude Include="Structural\GameObject\SuperGameObject.h" />
+    <ClInclude Include="Structural\InternalComponents\SpriteComponent\SpriteComponent.h" />
     <ClInclude Include="Structural\InternalComponents\TestComponent\TestComponent.h" />
     <ClInclude Include="Structural\Packages\ComponentLoadPackage.h" />
     <ClInclude Include="Structural\Packages\GrandScenePackage.h" />
@@ -291,6 +292,7 @@
     <ClCompile Include="Structural\Component\SuperGameComponent.cpp" />
     <ClCompile Include="Structural\GameObject\ComponentFactory.cpp" />
     <ClCompile Include="Structural\GameObject\SuperGameObject.cpp" />
+    <ClCompile Include="Structural\InternalComponents\SpriteComponent\SpriteComponent.cpp" />
     <ClCompile Include="Structural\InternalComponents\TestComponent\TestComponent.cpp" />
     <ClCompile Include="Structural\Packages\SuperComponentLoadPackage.cpp" />
     <ClCompile Include="Structural\Packages\SuperGrandScenePackage.cpp" />
