--- a/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj
+++ b/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj
@@ -142,10 +142,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GamePackage\GamePackage.h" />
+    <ClInclude Include="GamePackage\PackageFile.h" />
+    <ClInclude Include="GamePackage\PackageFilePathing.h" />
+    <ClInclude Include="GamePackage\PackageFileSystem.h" />
+    <ClInclude Include="GamePackage\PackageFileSystemDirectory.h" />
+    <ClInclude Include="GamePackage\PackageFileSystemFile.h" />
+    <ClInclude Include="GamePackage\PackageFileUnarchived.h" />
+    <ClInclude Include="GamePackage\PackagePaths.h" />
+    <ClInclude Include="GamePackage\SGEPackagePaths.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GamePackage.cpp" />
+    <ClCompile Include="GamePackage\PackageFilePathing.cpp" />
+    <ClCompile Include="GamePackage\PackageFileUnarchived.cpp" />
+    <ClCompile Include="GamePackage\SGEPackagePaths.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -160,6 +171,7 @@
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\..\SuperGameEngine\packages\zlib_native.redist.1.2.11\build\native\zlib_native.redist.targets" Condition="Exists('..\..\SuperGameEngine\packages\zlib_native.redist.1.2.11\build\native\zlib_native.redist.targets')" />
     <Import Project="..\..\SuperGameEngine\packages\zlib_native.1.2.11\build\native\zlib_native.targets" Condition="Exists('..\..\SuperGameEngine\packages\zlib_native.1.2.11\build\native\zlib_native.targets')" />
+    <Import Project="..\..\SuperGameEngine\packages\rapidxml.1.13\build\native\rapidxml.targets" Condition="Exists('..\..\SuperGameEngine\packages\rapidxml.1.13\build\native\rapidxml.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -167,5 +179,6 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\SuperGameEngine\packages\zlib_native.redist.1.2.11\build\native\zlib_native.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\SuperGameEngine\packages\zlib_native.redist.1.2.11\build\native\zlib_native.redist.targets'))" />
     <Error Condition="!Exists('..\..\SuperGameEngine\packages\zlib_native.1.2.11\build\native\zlib_native.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\SuperGameEngine\packages\zlib_native.1.2.11\build\native\zlib_native.targets'))" />
+    <Error Condition="!Exists('..\..\SuperGameEngine\packages\rapidxml.1.13\build\native\rapidxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\SuperGameEngine\packages\rapidxml.1.13\build\native\rapidxml.targets'))" />
   </Target>
 </Project>
