--- a/FatedQuest.Libraries/GamePackage/packages.config
+++ b/FatedQuest.Libraries/GamePackage/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="rapidxml" version="1.13" targetFramework="native" />
   <package id="zlib_native" version="1.2.11" targetFramework="native" />
   <package id="zlib_native.redist" version="1.2.11" targetFramework="native" />
 </packages>
