--- a/FatedQuest.Libraries/GamePackageTests/packages.config
+++ b/FatedQuest.Libraries/GamePackageTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn" version="1.8.1.7" targetFramework="native" />
+  <package id="rapidxml" version="1.13" targetFramework="native" />
   <package id="zlib_native" version="1.2.11" targetFramework="native" />
   <package id="zlib_native.redist" version="1.2.11" targetFramework="native" />
 </packages>
